<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_gravity="center_horizontal"
    tools:context="be.heh.kotlinproject_dstheh.MaterielRegisterActivity"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UseCompoundDrawables">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/s_lectionner_l_id"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_mregister_id"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_gravity="center_horizontal"
        android:id="@+id/bt_light_camera_action"
        android:text="@string/valider"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:onClick="onMRegisterClickManager"
        android:layout_marginBottom="20dp"
        tools:ignore="OnClick" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/ajouter_un_nouvel_item"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        tools:ignore="RtlHardcoded" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/type"
            android:textColor="@color/bleu"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_mregister_type"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/mod_le"
            android:textColor="@color/bleu"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_mregister_modele"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/site_web"
            android:textColor="@color/bleu"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_mregister_sw"
            android:autofillHints="name"
            android:inputType=""
            tools:ignore="LabelFor"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/quantity"
            android:textColor="@color/bleu"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"
            tools:ignore="RtlHardcoded" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_mregister_q"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_gravity="center_horizontal"
        android:id="@+id/bt_mregister"
        android:text="@string/ajouter"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:onClick="onMRegisterClickManager"
        android:layout_marginBottom="20dp"
        tools:ignore="OnClick" />
</LinearLayout>